# routers/api/v1/article.go
@@ -1,103 +1,105 @@
 package v1
 
 import (
-    "net/http"
-    //"log"
+	"net/http"
+	//"log"
 
-    "github.com/gin-gonic/gin"
-    "github.com/astaxie/beego/validation"
-    "github.com/unknwon/com"
+	"github.com/astaxie/beego/validation"
+	"github.com/gin-gonic/gin"
+	"github.com/unknwon/com"
 
-    "go_project/models"
-    "go_project/pkg/e"
-    "go_project/pkg/setting"
-    "go_project/pkg/util"
-    "go_project/pkg/logging"
-    //"fmt"
+	"go_project/models"
+	"go_project/pkg/e"
+	"go_project/pkg/logging"
+	"go_project/pkg/setting"
+	"go_project/pkg/util"
+	//"fmt"
 )
 
 // @Summary 获取单个文章
 // @Tags article
 // @Produce  json
-// @param token header string true "Authorization"
-// @Param id query int false "id"
+// @Param id path int false "id"
 // @Success 200 {string} e.BackStruct "{"code":200,"data":{},"msg":"ok"}"
-// @Router /api/v1/articles/:id [get]
+// @Router /api/v1/articles/ [get]
 func GetArticle(c *gin.Context) {
-    id := com.StrTo(c.Param("id")).MustInt()
+	id := com.StrTo(c.Param("id")).MustInt()
 
-    valid := validation.Validation{}
-    valid.Min(id, 1, "id").Message("ID必须大于0")
+	valid := validation.Validation{}
+	valid.Min(id, 1, "id").Message("ID必须大于0")
 
-    code := e.INVALID_PARAMS
-    var data interface {}
-    if ! valid.HasErrors() {
-        if models.ExistArticleByID(id) {
-            data = models.GetArticle(id)
-            code = e.SUCCESS
-        } else {
-            code = e.ERROR_NOT_EXIST_ARTICLE
-        }
-    } else {
-        for _, err := range valid.Errors {
-            logging.Info(err.Key, err.Message)
-        }
-    }
+	code := e.INVALID_PARAMS
+	var data interface{}
+	if !valid.HasErrors() {
+		if models.ExistArticleByID(id) {
+			data = models.GetArticle(id)
+			code = e.SUCCESS
+		} else {
+			code = e.ERROR_NOT_EXIST_ARTICLE
+		}
+	} else {
+		for _, err := range valid.Errors {
+			logging.Info(err.Key, err.Message)
+		}
+	}
 
-    c.JSON(http.StatusOK, gin.H{
-        "code" : code,
-        "msg" : e.GetMsg(code),
-        "data" : data,
-    })
+	c.JSON(http.StatusOK, gin.H{
+		"code": code,
+		"msg":  e.GetMsg(code),
+		"data": data,
+	})
 }
-
 
 // @Summary 获取多个文章标签
 // @Tags article
 // @Produce  json
-// @param token header string true "Authorization"
 // @Param state query int false "State"
 // @Success 200 {string} e.BackStruct "{"code":200,"data":{},"msg":"ok"}"
 // @Router /api/v1/articles [get]
 func GetArticles(c *gin.Context) {
-    data := make(map[string]interface{})
-    maps := make(map[string]interface{})
-    valid := validation.Validation{}
+	data := make(map[string]interface{})
+	maps := make(map[string]interface{})
+	valid := validation.Validation{}
 
-    var state int = -1
-    if arg := c.Query("state"); arg != "" {
-        state = com.StrTo(arg).MustInt()
-        maps["state"] = state
+	var state int = -1
+	if arg := c.Query("state"); arg != "" {
+		state = com.StrTo(arg).MustInt()
+		maps["state"] = state
 
-        valid.Range(state, 0, 1, "state").Message("状态只允许0或1")
-    }
+		valid.Range(state, 0, 1, "state").Message("状态只允许0或1")
+	}
 
-    var tagId int = -1
-    if arg := c.Query("tag_id"); arg != "" {
-        tagId = com.StrTo(arg).MustInt()
-        maps["tag_id"] = tagId
+	var tagId int = -1
+	if arg := c.Query("tag_id"); arg != "" {
+		tagId = com.StrTo(arg).MustInt()
+		maps["tag_id"] = tagId
 
-        valid.Min(tagId, 1, "tag_id").Message("标签ID必须大于0")
-    }
+		valid.Min(tagId, 1, "tag_id").Message("标签ID必须大于0")
+	}
 
-    code := e.INVALID_PARAMS
-    if ! valid.HasErrors() {
-        code = e.SUCCESS
+	created_by := c.Query("created_by")
 
-        data["lists"] = models.GetArticles(util.GetPage(c), setting.PageSize, maps)
-        data["total"] = models.GetArticleTotal(maps)
+	if len(created_by) > 0 {
+		maps["created_by"] = created_by
+	}
+	code := e.INVALID_PARAMS
+	if !valid.HasErrors() {
+		code = e.SUCCESS
 
-    } else {
-        for _, err := range valid.Errors {
-            logging.Info(err.Key, err.Message)
-        }
-    }
+		data["lists"] = models.GetArticles(util.GetPage(c), setting.PageSize, maps)
+		data["total"] = models.GetArticleTotal(maps)
 
-    c.JSON(http.StatusOK, gin.H{
-        "code" : code,
-        "msg" : e.GetMsg(code),
-        "data" : data,
-    })
+	} else {
+		for _, err := range valid.Errors {
+			logging.Info(err.Key, err.Message)
+		}
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": code,
+		"msg":  e.GetMsg(code),
+		"data": data,
+	})
 }
 
 // @Summary 新增文章
@@ -112,55 +114,71 @@ func GetArticles(c *gin.Context) {
 // @Success 200 {string} e.BackStruct "{"code":200,"data":{},"msg":"ok"}"
 // @Router /api/v1/articles [post]
 func AddArticle(c *gin.Context) {
-    tagId := com.StrTo(c.Query("tag_id")).MustInt()
-    title := c.Query("title")
-    desc := c.Query("desc")
-    content := c.Query("content")
-    createdBy := c.Query("created_by")
-    state := com.StrTo(c.DefaultQuery("state", "0")).MustInt()
+	// tagId := com.StrTo(c.Query("tag_id")).MustInt()
+	// title := c.Query("title")
+	// desc := c.Query("desc")
+	// content := c.Query("content")
+	// createdBy := c.Query("created_by")
+	// state := com.StrTo(c.DefaultQuery("state", "0")).MustInt()
 
-    valid := validation.Validation{}
-    valid.Min(tagId, 1, "tag_id").Message("标签ID必须大于0")
-    valid.Required(title, "title").Message("标题不能为空")
-    valid.Required(desc, "desc").Message("简述不能为空")
-    valid.Required(content, "content").Message("内容不能为空")
-    valid.Required(createdBy, "created_by").Message("创建人不能为空")
-    valid.Range(state, 0, 1, "state").Message("状态只允许0或1")
+	tagIdStr, _ := c.GetPostForm("tagId")
+	tagId := com.StrTo(tagIdStr).MustInt()
+	title, _ := c.GetPostForm("title")
+	desc, _ := c.GetPostForm("desc")
+	content, _ := c.GetPostForm("content")
+	createdBy, _ := c.GetPostForm("createdBy")
+	stateStr, _ := c.GetPostForm("state")
+	state := com.StrTo(stateStr).MustInt()
 
-    code := e.INVALID_PARAMS
-    if ! valid.HasErrors() {
-        if models.ExistTagByID(tagId) {
-            data := make(map[string]interface {})
-            data["tag_id"] = tagId
-            data["title"] = title
-            data["desc"] = desc
-            data["content"] = content
-            data["created_by"] = createdBy
-            data["state"] = state
+	valid := validation.Validation{}
+	valid.Min(tagId, 1, "tag_id").Message("标签ID必须大于0")
+	valid.Required(title, "title").Message("标题不能为空")
+	valid.Required(desc, "desc").Message("简述不能为空")
+	valid.Required(content, "content").Message("内容不能为空")
+	valid.Required(createdBy, "created_by").Message("创建人不能为空")
+	valid.Range(state, 0, 1, "state").Message("状态只允许0或1")
 
-            models.AddArticle(data)
-            code = e.SUCCESS
-        } else {
-            code = e.ERROR_NOT_EXIST_TAG
-        }
-    } else {
-        for _, err := range valid.Errors {
-            logging.Info(err.Key, err.Message)
-        }
-    }
+	errormssage := ""
+	code := e.INVALID_PARAMS
+	if !valid.HasErrors() {
+		if models.ExistTagByID(tagId) {
+			data := make(map[string]interface{})
+			// if len(content) > 200 {
+			// 	desc = common.SubString(content, 0, 200)
+			// } else {
+			// 	desc = content
+			// }
+			data["tag_id"] = tagId
+			data["title"] = title
+			data["desc"] = desc
+			data["content"] = content
+			data["created_by"] = createdBy
+			data["state"] = state
 
-    c.JSON(http.StatusOK, gin.H{
-        "code" : code,
-        "msg" : e.GetMsg(code),
-        "data" : make(map[string]interface{}),
-    })
+			models.AddArticle(data)
+			code = e.SUCCESS
+		} else {
+			code = e.ERROR_NOT_EXIST_TAG
+		}
+	} else {
+		for _, err := range valid.Errors {
+			logging.Info(err.Key, err.Message)
+			errormssage += "," + err.Message
+		}
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": code,
+		"msg":  e.GetMsg(code) + errormssage,
+		"data": make(map[string]interface{}),
+	})
 }
 
 // @Summary 修改文章
 // @Tags article
 // @Produce  json
 // @param token header string true "Authorization"
-// @Param id query int false "id"
+// @Param id path int false "id"
 // @Param tag_id query int false "tag_id"
 // @Param title query string false "title"
 // @Param desc query string false "desc"
@@ -170,99 +188,103 @@ func AddArticle(c *gin.Context) {
 // @Success 200 {string} e.BackStruct "{"code":200,"data":{},"msg":"ok"}"
 // @Router /api/v1/articles/:id [put]
 func EditArticle(c *gin.Context) {
-    valid := validation.Validation{}
+	valid := validation.Validation{}
 
-    id := com.StrTo(c.Param("id")).MustInt()
-    tagId := com.StrTo(c.Query("tag_id")).MustInt()
-    title := c.Query("title")
-    desc := c.Query("desc")
-    content := c.Query("content")
-    modifiedBy := c.Query("modified_by")
+	id := com.StrTo(c.Param("id")).MustInt()
+	// tagId := com.StrTo(c.Query("tag_id")).MustInt()
+	// title := c.Query("title")
+	// desc := c.Query("desc")
+	// content := c.Query("content")
+	// modifiedBy := c.Query("modified_by")
 
-    var state int = -1
-    if arg := c.Query("state"); arg != "" {
-        state = com.StrTo(arg).MustInt()
-        valid.Range(state, 0, 1, "state").Message("状态只允许0或1")
-    }
+	tagIdStr, _ := c.GetPostForm("tag_id")
+	tagId := com.StrTo(tagIdStr).MustInt()
+	title, _ := c.GetPostForm("title")
+	desc, _ := c.GetPostForm("desc")
+	content, _ := c.GetPostForm("content")
+	modifiedBy, _ := c.GetPostForm("modified_by")
+	stateStr, _ := c.GetPostForm("state")
+	state := com.StrTo(stateStr).MustInt()
 
-    valid.Min(id, 1, "id").Message("ID必须大于0")
-    valid.MaxSize(title, 100, "title").Message("标题最长为100字符")
-    valid.MaxSize(desc, 255, "desc").Message("简述最长为255字符")
-    valid.MaxSize(content, 65535, "content").Message("内容最长为65535字符")
-    valid.Required(modifiedBy, "modified_by").Message("修改人不能为空")
-    valid.MaxSize(modifiedBy, 100, "modified_by").Message("修改人最长为100字符")
+	valid.Range(state, 0, 1, "state").Message("状态只允许0或1")
+	valid.Min(id, 1, "id").Message("ID必须大于0")
+	valid.MaxSize(title, 100, "title").Message("标题最长为100字符")
+	valid.MaxSize(desc, 255, "desc").Message("简述最长为255字符")
+	valid.MaxSize(content, 65535, "content").Message("内容最长为65535字符")
+	valid.Required(modifiedBy, "modified_by").Message("修改人不能为空")
+	valid.MaxSize(modifiedBy, 100, "modified_by").Message("修改人最长为100字符")
 
-    code := e.INVALID_PARAMS
-    if ! valid.HasErrors() {
-        if models.ExistArticleByID(id) {
-            if models.ExistTagByID(tagId) {
-                data := make(map[string]interface {})
-                if tagId > 0 {
-                    data["tag_id"] = tagId
-                }
-                if title != "" {
-                    data["title"] = title
-                }
-                if desc != "" {
-                    data["desc"] = desc
-                }
-                if content != "" {
-                    data["content"] = content
-                }
+	code := e.INVALID_PARAMS
+	if !valid.HasErrors() {
+		if models.ExistArticleByID(id) {
+			if models.ExistTagByID(tagId) {
+				data := make(map[string]interface{})
+				if tagId > 0 {
+					data["tag_id"] = tagId
+				}
+				if title != "" {
+					data["title"] = title
+				}
+				if desc != "" {
+					data["desc"] = desc
+				}
+				if content != "" {
+					data["content"] = content
+				}
 
-                data["modified_by"] = modifiedBy
+				data["modified_by"] = modifiedBy
 
-                models.EditArticle(id, data)
-                code = e.SUCCESS
-            } else {
-                code = e.ERROR_NOT_EXIST_TAG
-            }
-        } else {
-            code = e.ERROR_NOT_EXIST_ARTICLE
-        }
-    } else {
-        for _, err := range valid.Errors {
-            logging.Info(err.Key, err.Message)
-        }
-    }
+				models.EditArticle(id, data)
+				code = e.SUCCESS
+			} else {
+				code = e.ERROR_NOT_EXIST_TAG
+			}
+		} else {
+			code = e.ERROR_NOT_EXIST_ARTICLE
+		}
+	} else {
+		for _, err := range valid.Errors {
+			logging.Info(err.Key, err.Message)
+		}
+	}
 
-    c.JSON(http.StatusOK, gin.H{
-        "code" : code,
-        "msg" : e.GetMsg(code),
-        "data" : make(map[string]string),
-    })
+	c.JSON(http.StatusOK, gin.H{
+		"code": code,
+		"msg":  e.GetMsg(code),
+		"data": make(map[string]string),
+	})
 }
 
 // @Summary 删除文章
 // @Tags article
 // @Produce  json
 // @param token header string true "Authorization"
-// @Param id query int false "id"
+// @Param id path int false "id"
 // @Success 200 {string} e.BackStruct "{"code":200,"data":{},"msg":"ok"}"
 // @Router /api/v1/articles/:id [delete]
 func DeleteArticle(c *gin.Context) {
-    id := com.StrTo(c.Param("id")).MustInt()
+	id := com.StrTo(c.Param("id")).MustInt()
 
-    valid := validation.Validation{}
-    valid.Min(id, 1, "id").Message("ID必须大于0")
+	valid := validation.Validation{}
+	valid.Min(id, 1, "id").Message("ID必须大于0")
 
-    code := e.INVALID_PARAMS
-    if ! valid.HasErrors() {
-        if models.ExistArticleByID(id) {
-            models.DeleteArticle(id)
-            code = e.SUCCESS
-        } else {
-            code = e.ERROR_NOT_EXIST_ARTICLE
-        }
-    } else {
-        for _, err := range valid.Errors {
-            logging.Info(err.Key, err.Message)
-        }
-    }
+	code := e.INVALID_PARAMS
+	if !valid.HasErrors() {
+		if models.ExistArticleByID(id) {
+			models.DeleteArticle(id)
+			code = e.SUCCESS
+		} else {
+			code = e.ERROR_NOT_EXIST_ARTICLE
+		}
+	} else {
+		for _, err := range valid.Errors {
+			logging.Info(err.Key, err.Message)
+		}
+	}
 
-    c.JSON(http.StatusOK, gin.H{
-        "code" : code,
-        "msg" : e.GetMsg(code),
-        "data" : make(map[string]string),
-    })
+	c.JSON(http.StatusOK, gin.H{
+		"code": code,
+		"msg":  e.GetMsg(code),
+		"data": make(map[string]string),
+	})
 }
